--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:parentActivityName=".activity.LoginActivity"/>
         <activity
             android:name=".activity.HomeActivity"
+            android:label="@string/home_title"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
