--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,28 +35,24 @@
 
         <activity
             android:name=".activity.SignUpActivity"
+            android:parentActivityName=".activity.SplashActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"
-            android:parentActivityName=".activity.LoginActivity"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.HomeActivity"
             android:label="@string/home_title"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-
         <activity
             android:name=".activity.AddMosqueActivity"
-            android:parentActivityName=".activity.HomeActivity">
-        </activity>
-
+            android:parentActivityName=".activity.HomeActivity"></activity>
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".activity.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"
-            android:parentActivityName=".activity.LoginActivity">
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
